# software-orchestration

./: .gitignore  .sdv-blueprint.json  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement.md
.github/workflows/: containerize-charriot.yml  containerize-invehicle-stack-agemo.yml  containerize-invehicle-stack-chariott.yml  containerize-invehicle-stack-freyja-application.yml  containerize-invehicle-stack-freyja.yml  containerize-invehicle-stack-ibeji.yml  containerize-invehicle-stack.yml  containerize-sample-workloads.yaml.yml  containerize-sample-workloads.yml  devskim.yml
eclipse-ankaios/: README.md
eclipse-ankaios/.devcontainer/: Dockerfile  devcontainer.json
eclipse-ankaios/config/: default.yaml  startupState.yaml
eclipse-ankaios/scripts/: run_blueprint.sh
eclipse-bluechi/: README.md  what-is-bluechi.md
eclipse-bluechi/.devcontainer/: Dockerfile  devcontainer.json  devcontainer.json.license
eclipse-bluechi/workspace/workloads/: agemo.kube  agemo.yml  chariott.kube  chariott.yml  freyja.kube  freyja.yml  ibeji.kube  ibeji.yml  mosquitto.kube  mosquitto.yml  smart_trailer_application.kube  smart_trailer_application.yml  trailer_connected_provider.kube  trailer_connected_provider.yml  trailer_properties_provider.kube  trailer_properties_provider.yml
scenarios/smart_trailer/: Cargo.toml  Dockerfile.sample_workloads  README.md
scenarios/smart_trailer/.cargo/: config.toml
scenarios/smart_trailer/applications/smart_trailer_application/: Cargo.toml  Dockerfile
scenarios/smart_trailer/applications/smart_trailer_application/src/: main.rs
scenarios/smart_trailer/container/cargo/: config.toml
scenarios/smart_trailer/digital-twin-model/: Cargo.toml
scenarios/smart_trailer/digital-twin-model/dtdl/: trailer.json
scenarios/smart_trailer/digital-twin-model/src/: lib.rs  trailer_v1.rs
scenarios/smart_trailer/digital_twin_providers/common/: Cargo.toml
scenarios/smart_trailer/digital_twin_providers/common/src/: constants.rs  lib.rs  utils.rs
scenarios/smart_trailer/digital_twin_providers/trailer_connected_provider/: Cargo.toml  Dockerfile
scenarios/smart_trailer/digital_twin_providers/trailer_connected_provider/interfaces/: digital_twin_get_provider.proto
scenarios/smart_trailer/digital_twin_providers/trailer_connected_provider/proto_build/: Cargo.toml  build.rs
scenarios/smart_trailer/digital_twin_providers/trailer_connected_provider/proto_build/src/: lib.rs
scenarios/smart_trailer/digital_twin_providers/trailer_connected_provider/src/: main.rs  trailer_connected_provider_impl.rs
scenarios/smart_trailer/digital_twin_providers/trailer_properties_provider/: Cargo.toml  Dockerfile
scenarios/smart_trailer/digital_twin_providers/trailer_properties_provider/src/: main.rs  trailer_properties_provider_impl.rs
scenarios/smart_trailer/interfaces/invehicle_digital_twin/v1/: invehicle_digital_twin.proto
scenarios/smart_trailer/interfaces/module/managed_subscribe/v1/: managed_subscribe.proto
scenarios/smart_trailer/interfaces/service_discovery/v1/: service_registry.proto
scenarios/smart_trailer/proto_build/: Cargo.toml  build.rs
scenarios/smart_trailer/proto_build/src/: lib.rs
scenarios/smart_trailer/scripts/: start_trailer_applications_ankaios.sh  start_trailer_applications_bluechi.sh
