# Copyright (c) Microsoft Corporation.
# Licensed under the Apache License 2.0 license.
# SPDX-License-Identifier: Apache-2.0

[workspace]
# The default resolver for workspaces is different than for regular packages, so use v2 to avoid warnings
resolver = "2"

members = [
  # interfaces required for apps to communicate with the in-vehicle stack
  "proto_build",

  # Applications which make up the smart trailer scenario
  "applications/smart_trailer_application",
  "digital_twin_providers/common",
  "digital_twin_providers/trailer_connected_provider",
  "digital_twin_providers/trailer_properties_provider",
]

[workspace.dependencies]
digital-twin-model = { path = "./digital-twin-model" }
digital-twin-providers-common = { path = "./digital_twin_providers/common" }
env_logger= "0.11.3"
invehicle-stack-interfaces = { path = "./proto_build" }
log = "0.4.20"
paho-mqtt = "0.12"
parking_lot = "0.12.1"
prost = "0.12.1"
serde = "1.0.190"
serde_derive = "1.0.163"
serde_json = "^1.0"
smart-trailer-interfaces = { path = "./digital_twin_providers/trailer_connected_provider/proto_build" }
strum = "0.26.2"
strum_macros = "0.26.2"
tokio = "1.29.1"
tonic = "0.11.0"
tonic-build = "0.11.0"
uuid = "1.2.2"
