# Copyright (c) Microsoft Corporation.
# Licensed under the Apache License 2.0 license.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "digital-twin-model"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
serde = { workspace = true }
serde_derive = { workspace = true }
