# Copyright (c) Microsoft Corporation.
# Licensed under the Apache License, Version 2.0.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "invehicle-stack-interfaces"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
prost = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }