[package]
name = "smart_trailer_application"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
digital-twin-model = { path = "../../digital-twin-model" }
digital_twin_providers_common = { path = "../../digital_twin_providers/common" }
env_logger= { workspace = true }
invehicle-stack-interfaces = { path = "../../proto_build" }
log = { workspace = true }
paho-mqtt =  { workspace = true, features = ["vendored-ssl"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tonic = { workspace = true }
uuid = { workspace = true, features = ["v4", "fast-rng", "macro-diagnostics"] }