# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "digital-twin-providers-common"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
invehicle-stack-interfaces = { workspace = true }
log =  { workspace = true }
tonic =  { workspace = true }
