# Copyright (c) Microsoft Corporation.
# Licensed under the Apache License 2.0 license.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "smart-trailer-interfaces"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
prost = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
